--- a/jvm-packages/CMakeLists.txt
+++ b/jvm-packages/CMakeLists.txt
@@ -9,7 +9,9 @@ target_include_directories(xgboost4j
   ${PROJECT_SOURCE_DIR}/jvm-packages/xgboost4j/src/native
   ${PROJECT_SOURCE_DIR}/include
   ${PROJECT_SOURCE_DIR}/dmlc-core/include
-  ${PROJECT_SOURCE_DIR}/rabit/include)
+  ${PROJECT_SOURCE_DIR}/rabit/include
+  /home/xgboost/install/OneCCL/oneccl/build/_install/include
+)
 
 set_output_directory(xgboost4j ${PROJECT_SOURCE_DIR}/lib)
 set_target_properties(
@@ -19,4 +21,6 @@ set_target_properties(
 target_link_libraries(xgboost4j
   PRIVATE
   ${LINKED_LIBRARIES_PRIVATE}
-  ${JAVA_JVM_LIBRARY})
+  ${JAVA_JVM_LIBRARY}
+  /home/xgboost/install/OneCCL/oneccl/build/_install/lib/libccl.so
+)
