--- a/jvm-packages/pom.xml
+++ b/jvm-packages/pom.xml
@@ -306,7 +306,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
-                    <skipTests>false</skipTests>
+                    <skipTests>true</skipTests>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
